@@ -402,6 +402,9 @@ Trunk (unreleased changes)
 
     HDFS-668. TestFileAppend3#TC7 sometimes hangs. (hairong)
 
+    HDFS-679. Appending to a partial chunk incorrectly assumes the
+    first packet fills up the partial chunk. (hairong)
+
 Release 0.20.2 - Unreleased
 
   BUG FIXES
